# OraFlow

./: .env.example  .gitignore  AGENTS.md  ORAFLOW_ARCHITECTURE_WALKTHROUGH.md  ORAFLOW_DOCS.md  ORAFLOW_INSTALL_UPGRADE_IMPACT.md  README.md  oraflow-mcp.spec  package.json  pyproject.toml
OpsDashboard/: DevCloud  DevOnprem  ProdOnprem  QaCloud  QaOnprem  StageOnprem  UatOnprem
context/: README.md  lemedtest.sql  pla-creds-and-distribution.md  pla-tns-metadata.md  pla.md  system_user_variables.txt
extensions/vscode/: .vscodeignore  LICENSE.txt  README.md  extension.js  package-lock.json  package.json  uninstall.js
extensions/vscode/assets/: ORAFLOW_INSTRUCTIONS.md  customers.toml  help-topics.toml  oraflow-agent-instructions.md
oracle-network/admin/: cloud-tnsnames.ora  sqlnet.ora
prompts/: ERXD_L3_IMPLEMENT_FIX.md  ERXD_L3_INVESTIGATION.md  ERXD_L3_TRIAGE.md  ORAFLOW_EXTENSION_UPGRADE.md
schemas/olap/trexone_aud_data/: acc_acct_entity.sql  acc_balance.sql  (+286 more)
scripts/: clean-uninstall.ps1  extract_trexone_aud_data_ddl.sql  extract_trexone_data_ddl.sql  extract_trexone_dw_data_ddl.sql  extract_trexone_ods_data_ddl.sql  rebuild-vsix.ps1  refresh_schema_catalog.ps1  split_ddl_dump.py  verify-vsix-internals.ps1  verify-vsix.ps1
tests/: README.md  test_clean_uninstall_lifecycle.py  test_credentials.py  test_customer_target.py  test_db_unit.py  test_help.py  test_jira.py  test_pipeline.py  test_safety.py  test_safety_extended.py  test_sqlfile.py  test_sqlplus_csv.py  test_tns.py  test_v015_release.py
tests/fixtures/: cloud-tnsnames_sample.ora  tnsnames_sample.ora
(+2842 files in other folders)
