[project]
name = "oraflow"
version = "0.1.6"
description = "Local read-only Oracle and JiraFlow MCP server/CLI for EnterpriseRx investigations"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "fastmcp==3.2.4",
    "dnspython>=2.8.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.23.0",
    "oracledb>=3.4.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.2",
    "cryptography>=46.0.7",
    "rapidfuzz>=3.14.3",
    "rich>=14.2.0",
    "sqlglot>=28.0.0",
    "typer>=0.20.0",
    "truststore>=0.10.4",
]

[project.scripts]
oraflow = "oraflow.cli:app"
oraflow-mcp = "oraflow.server:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oraflow"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".venv",
    "build",
    "dist",
    "extensions/vscode/bin",
    "extensions/vscode/dist",
    "extensions/vscode/node_modules",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
